CHANGES
=======

* Fixed small bugs and added a lot of keys
* Added tests and travis image
* Update README & Added travis and requirements

1.1.2
-----

* new feature hot components load and added main argument decorator
* Added new feature colors and change filter menu function
* bugfix on call event function & added authors and changelog
* Fix minor issues and add dependency
* Added filename on debug

1.1.0
-----

* improved the debugging tools and their presentation

1.0.3
-----

* fix bugs in pypi package
* Config pypi packages

1.0
---

* Added examples, README and propertys to label
* fixed bugs in menu, input, filter\_input
* Hide implementation of blessed in short functions with common uses
* Restructuring use axel lib and more changes in interface
* fix issues and added params min\_x, min\_y
* fix wrap theme and c1801 in menu
* Added new color fix decorator params
* fix issue float value and key menu filter
* change theme dered to single and double
* initial commit